# admission-skills

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  refresh-data.yml
agents/: aid-analyzer.md  college-scout.md  deadline-auditor.md  essay-reviewer.md  mock-interviewer.md  scholarship-scout.md
data/: ai_policies.json  college_index.json  deadlines.json  essay_prompts.json  milestones.json  sources.json  systems.json  test_dates.json  test_policy.json
data/schemas/: colleges.schema.json  config.schema.json  essays-index.schema.json  hs-timeline.schema.json  profile.schema.json
docs/: AUTHORING.md  DATA_SOURCES.md  INTEGRATIONS.md  MAINTAINERS.md  SPEC-myhstimeline-integration.md  WORKSPACE.md
hooks/: hooks.json
scripts/: ics_generate.py  init_workspace.py  refresh_data.py  run.mjs  scholarship_search.py  scorecard_search.py  timeline_build.py  urban_lookup.py
scripts/hooks/: common.mjs  essay_guard.mjs  session_start.mjs  snapshot_essay.mjs  (+2 more)
templates/: WORKSPACE-README.md  colleges.json  config.json  essays-index.json  profile.json  workspace-gitignore
tests/: conftest.py  test_datasets.py  test_frontmatter.py  test_hooks.py  test_ics_generate.py  test_manifest_consistency.py  test_schemas.py  test_scholarship_search.py  test_scorecard_search.py  test_timeline_build.py  test_workspace_io.py
tools/: build_college_index.py  build_reqgrid.py  build_test_policy.py  extract_verified_datasets.py
(+67 files in other folders)
