[project]
name = "admission-skills"
version = "1.0.0"
description = "Admit — Claude Code plugin for US college admissions (maintainer tooling and tests)"
requires-python = ">=3.10"
license = { text = "MIT" }

# Runtime scripts under scripts/ are stdlib-only by design — users never install
# anything. These extras are for maintainers and CI only.
[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "jsonschema>=4.21,<5.0",
    "pdfplumber>=0.11,<0.12",
    "pyyaml>=6.0,<7.0",
    "ruff>=0.4,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
include = ["scripts/**/*.py", "tools/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]
